[gd_scene load_steps=8 format=3 uid="uid://b2684vhkmxcb7"]

[ext_resource type="Script" path="res://scenes/npc/npc.gd" id="1_47arr"]
[ext_resource type="Texture2D" uid="uid://b2fu6uvpqs5n4" path="res://images/soldier1_gun.png" id="2_45i56"]
[ext_resource type="Texture2D" uid="uid://dujnaj2o8mnbr" path="res://images/running_1.png" id="3_4mij4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dsb66"]
radius = 18.1108

[sub_resource type="Animation" id="Animation_8phlq"]
resource_name = "alert"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.588235, 0, 0.0196078, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dtf3o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mxqrj"]
_data = {
"RESET": SubResource("Animation_dtf3o"),
"alert": SubResource("Animation_8phlq")
}

[node name="NPC" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 0
script = ExtResource("1_47arr")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_45i56")
offset = Vector2(8, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_dsb66")

[node name="NavAgent" type="NavigationAgent2D" parent="."]
path_desired_distance = 10.0
target_desired_distance = 20.0
avoidance_enabled = true
radius = 25.0

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -47.0
offset_top = -101.0
offset_right = 2.0
offset_bottom = -26.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "debug
label
info"

[node name="PlayerDetect" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="PlayerDetect"]
rotation = -1.5708
target_position = Vector2(0, 400)
collision_mask = 5

[node name="Warning" type="Sprite2D" parent="."]
visible = false
position = Vector2(-7, -3)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_4mij4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mxqrj")
}

[node name="GaspSound" type="AudioStreamPlayer2D" parent="."]

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitArea"]
shape = SubResource("CircleShape2D_dsb66")

[connection signal="velocity_computed" from="NavAgent" to="." method="_on_nav_agent_velocity_computed"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
